--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -36,42 +36,37 @@ div.viewer {
             background-color: #f9f5b1;
         }
 
+        div.scroll-up,
+        div.scroll-down {
+            width: 150px;
+            height: 10px;
+            opacity: 0;
+            margin-top: 3px;
+        }
+
+        div.scroll-up.active,
+        div.scroll-down.active {
+            opacity: 0.5;
+            cursor: pointer;
+        }
+
+        div.scroll-up.active:hover,
+        div.scroll-down.active:hover {
+            opacity: 1.0;
+        }
+
+        div.scroll-up {
+            background: url("../images/scroll-up.png") no-repeat 50% 2px;
+        }
+
+        div.scroll-down {
+            background: url("../images/scroll-down.png") no-repeat 50% 0;
+        }
+
         div.list {
             height: 287px;
             overflow: hidden;
             position: relative;
-
-            div.scrollbox {
-                position: absolute;
-            }
-
-            div.scroll-up,
-            div.scroll-down {
-                width: 150px;
-                height: 10px;
-                opacity: 0;
-            }
-
-            div.scroll-up.active,
-            div.scroll-down.active {
-                opacity: 0.5;
-                cursor: pointer;
-            }
-
-            div.scroll-up.active:hover,
-            div.scroll-down.active:hover {
-                opacity: 1.0;
-            }
-
-            div.scroll-up {
-                background: url("../images/scroll-up.png") no-repeat 50% 2px;
-            }
-
-            div.scroll-down {
-                background: url("../images/scroll-down.png") no-repeat 50% 0;
-                position: absolute;
-                bottom: 0;
-            }
         }
 
         div.room {
@@ -135,6 +130,10 @@ div.viewer {
                 background: url("../images/star.png") no-repeat 8px 4px;
             }
 
+            li.files {
+                background: url("../images/files.png") no-repeat 8px 4px;
+            }
+
             li.selected {
                 background-color: #f1f1f1;
                 border-left: 1px solid #e9e9e9;
@@ -187,6 +186,7 @@ div.viewer {
 
                         span.time {
                             float: right;
+                            color: #999;
                         }
                     }
 
@@ -198,10 +198,22 @@ div.viewer {
                         background: #f3f3f3;
                     }
 
-                    div.message {
-                        span.text {
-                            margin-left: 10px;
-                        }
+                    div.message span.star {
+                        opacity: 0;
+                        display: inline-block;
+                        width: 14px;
+                        height: 14px;
+                        cursor: pointer;
+                    }
+
+                    div.message:hover span.star {
+                        opacity: 1.0;
+                        background: url("../images/star-inactive.png") no-repeat;
+                    }
+
+                    div.message.starred span.star {
+                        opacity: 1.0;
+                        background: url("../images/star.png") no-repeat;
                     }
                 }
 
@@ -245,6 +257,32 @@ div.viewer {
                 }
             }
         }
+    }
+
+    div.content.join-room {
+        text-align: center;
+
+        span {
+            font-size: 12pt;
+            cursor: default;
+        }
+    }
+}
+
+div.blank-slate {
+    width: 190px;
+    padding: 20px;
+    text-align: center;
+
+    span {
+        font-size: 12pt;
+        display: block;
+        cursor: default;
+        margin-bottom: 10px;
+    }
+
+    img {
+        margin-bottom: 20px;
     }
 }
 
