--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -6,8 +6,7 @@ body {
 
 div.viewer {
     width: 600px;
-    height: 350px;
-    
+
     div.rooms {
         width: 150px;
         float: left;
@@ -266,6 +265,11 @@ div.viewer {
             font-size: 12pt;
             cursor: default;
         }
+    }
+
+    div.content.joining {
+        background: url("../images/ajax.gif") no-repeat 50% 50%;
+        height: 300px;
     }
 }
 
