--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -151,7 +151,7 @@ div.viewer {
 
         div.tab-content {
             background: #f1f1f1;
-            height: 255px;
+            height: 280px;
             padding: 10px;
             border-top: 1px solid #e9e9e9;
             border-left: 1px solid #e9e9e9;
@@ -161,7 +161,7 @@ div.viewer {
 
             div.group {
                 background: #fff;
-                height: 200px;
+                height: 228px;
                 border-top: 1px solid #ddd;
                 border-left: 1px solid #ddd;
                 border-right: 1px solid #e5e5e5;
@@ -172,7 +172,7 @@ div.viewer {
                     padding: 5px;
                     width: 383px;
                     overflow: auto;
-                    height: 190px;
+                    height: 218px;
 
                     div.activity {
                         padding: 3px;
@@ -189,7 +189,7 @@ div.viewer {
                         }
                     }
 
-                    div.presence {
+                    div.enter {
                         background: #fcf8bb;
                     }
 
@@ -197,7 +197,7 @@ div.viewer {
                         background: #f3f3f3;
                     }
 
-                    div.message span.star {
+                    div.text span.star {
                         opacity: 0;
                         display: inline-block;
                         width: 14px;
@@ -205,12 +205,12 @@ div.viewer {
                         cursor: pointer;
                     }
 
-                    div.message:hover span.star {
+                    div.text:hover span.star {
                         opacity: 1.0;
                         background: url("../images/star-inactive.png") no-repeat;
                     }
 
-                    div.message.starred span.star {
+                    div.text.starred span.star {
                         opacity: 1.0;
                         background: url("../images/star.png") no-repeat;
                     }
@@ -268,8 +268,12 @@ div.viewer {
     }
 
     div.content.joining {
-        background: url("../images/ajax.gif") no-repeat 50% 50%;
-        height: 300px;
+        background: #fff url("../images/ajax.gif") no-repeat 50% 50%;
+        height: 327px;
+        opacity: 0.7;
+        z-index: 1000;
+        position: absolute;
+        left: 150px;
     }
 }
 
