--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -125,12 +125,17 @@ div.viewer {
                 background: url("../images/chat.png") no-repeat 8px 5px;
             }
 
-            li.starred {
-                background: url("../images/star.png") no-repeat 8px 4px;
+            li.users {
+                background: url("../images/users.png") no-repeat 11px 6px;
+                padding-left: 28px;
             }
 
             li.files {
                 background: url("../images/files.png") no-repeat 8px 4px;
+            }
+
+            li.search {
+                background: url("../images/search.png") no-repeat 9px 6px;
             }
 
             li.selected {
