--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -181,7 +181,7 @@ div.viewer {
 
                     div.activity {
                         padding: 3px;
-                        margin-bottom: 2px;
+                        border-bottom: 1px solid #f3f3f3;
 
                         span.text {
                             width: 300px;
@@ -194,12 +194,20 @@ div.viewer {
                         }
                     }
 
-                    div.enter {
-                        background: #fcf8bb;
+                    div.enter, div.leave {
+                        background: #D9E7FB;
                     }
 
                     div.who {
                         background: #f3f3f3;
+                    }
+
+                    div.timestamp {
+                        color: #aaa;
+                    }
+
+                    div.lock, div.unlock {
+                        background: #F6C1A9;
                     }
 
                     div.text span.star {
