- Refactored save/load json and constants into separate file. - Added functionality to show uploaded files.

--- a/Code/styles/happycamper.css
+++ b/Code/styles/happycamper.css
@@ -171,6 +171,11 @@ div.viewer div.content div.tab-content div.group div.conversation div.timestamp 
 div.viewer div.content div.tab-content div.group div.conversation div.lock, div.viewer div.content div.tab-content div.group div.conversation div.unlock {
   background: #F6C1A9;
 }
+div.viewer div.content div.tab-content div.group div.conversation div.upload {
+  background: url("../images/files.png") no-repeat 0 3px;
+  padding-left: 18px;
+  height: 15px;
+}
 div.viewer div.content div.tab-content div.group div.conversation div.text span.star {
   opacity: 0;
   display: inline-block;
