--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -210,6 +210,12 @@ div.viewer {
                         background: #F6C1A9;
                     }
 
+                    div.upload {
+                        background: url("../images/files.png") no-repeat 0 3px;
+                        padding-left: 18px;
+                        height: 15px;
+                    }
+
                     div.text span.star {
                         opacity: 0;
                         display: inline-block;
