- Added "paste" message type to display.

--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -186,6 +186,15 @@ div.viewer {
                         span.text {
                             width: 300px;
                             float: left;
+
+                            pre {
+                                font-family: monospace;
+                                background-color: #f3f3f3;
+                                white-space: pre-wrap;
+                                border-top: 1px dotted #999;
+                                border-bottom: 1px dotted #999;
+                                padding: 3px 0;
+                            }
                         }
 
                         span.time {
