--- a/Code/styles/happycamper.css
+++ b/Code/styles/happycamper.css
@@ -155,6 +155,14 @@ div.viewer div.content div.tab-content div.group div.conversation div.activity s
   width: 300px;
   float: left;
 }
+div.viewer div.content div.tab-content div.group div.conversation div.activity span.text pre {
+  font-family: monospace;
+  background-color: #f3f3f3;
+  white-space: pre-wrap;
+  border-top: 1px dotted #999;
+  border-bottom: 1px dotted #999;
+  padding: 3px 0;
+}
 div.viewer div.content div.tab-content div.group div.conversation div.activity span.time {
   float: right;
   color: #999;
