--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -176,7 +176,8 @@ div.viewer {
                     float: left;
                     padding: 5px;
                     width: 383px;
-                    overflow: auto;
+                    overflow-y: auto;
+                    overflow-x: hidden;
                     height: 218px;
 
                     div.activity {
