--- a/Code/styles/happycamper.css
+++ b/Code/styles/happycamper.css
@@ -139,14 +139,46 @@ div.viewer div.content div.tab-content div.group {
   border-left: 1px solid #ddd;
   border-right: 1px solid #e5e5e5;
   border-bottom: 1px solid #e5e5e5;
+  position: relative;
+}
+div.viewer div.content div.tab-content div.group div.filters {
+  background: #f7f7f7;
+  height: 22px;
+  padding: 3px;
+}
+div.viewer div.content div.tab-content div.group div.filters a {
+  font-size: 8pt;
+  color: #555;
+  display: inline-block;
+  margin-left: 2px;
+  text-decoration: none;
+}
+div.viewer div.content div.tab-content div.group div.filters a:hover {
+  text-decoration: underline;
+}
+div.viewer div.content div.tab-content div.group div.filters select {
+  font-size: 8pt;
+  border: 1px solid #ccc;
+  outline: 0;
+}
+div.viewer div.content div.tab-content div.group div.filters select option {
+  padding: 0.2em;
+}
+div.viewer div.content div.tab-content div.group div.overhang {
+  width: 391px;
+  height: 5px;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(99%, white));
+  position: absolute;
+  top: 28px;
+  opacity: 0.3;
 }
 div.viewer div.content div.tab-content div.group div.conversation {
   float: left;
   padding: 5px;
-  width: 383px;
+  width: 382px;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 218px;
+  height: 190px;
 }
 div.viewer div.content div.tab-content div.group div.conversation div.activity {
   padding: 3px;
@@ -211,9 +243,6 @@ div.viewer div.content div.tab-content div.group div.conversation::-webkit-scrol
 }
 div.viewer div.content div.tab-content div.group div.conversation::-webkit-scrollbar-thumb:hover {
   background: -webkit-gradient(linear, left top, right top, color-stop(0%, #f3f3f3), color-stop(100%, #e3e3e3));
-}
-div.viewer div.content div.tab-content div.group div.sidebar {
-  float: right;
 }
 div.viewer div.content div.tab-content div.send {
   margin-top: 10px;
