--- a/Code/styles/happycamper.css
+++ b/Code/styles/happycamper.css
@@ -4,11 +4,12 @@ body {
   color: #333;
 }
 div.viewer {
-  width: 600px;
+  width: 615px;
 }
 div.viewer div.rooms {
   width: 150px;
   float: left;
+  margin-left: 15px;
   position: relative;
 }
 div.viewer div.rooms div.header {
@@ -17,13 +18,11 @@ div.viewer div.rooms div.header {
   height: 30px;
 }
 div.viewer div.rooms div.settings, div.viewer div.rooms div.room {
-  padding: 5px 5px 5px 18px;
+  padding: 5px 5px 5px 21px;
 }
 div.viewer div.rooms div.settings {
-  border-top: 1px solid #eae59d;
-  border-bottom: 1px solid #eae59d;
-  border-right: 1px solid #eae59d;
-  background: #fcf8bb url("../images/settings.png") no-repeat 3px 7px;
+  border: 1px solid #eae59d;
+  background: #fcf8bb url("../images/settings.png") no-repeat 6px 7px;
   color: #726c24;
   cursor: pointer;
 }
@@ -55,27 +54,28 @@ div.viewer div.rooms div.list {
   position: relative;
 }
 div.viewer div.rooms div.room {
-  border-top: 1px solid #ddd;
+  border-left: 1px solid #e9e9e9;
+  border-top: 1px solid #e9e9e9;
   border-right: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
   cursor: pointer;
   margin-bottom: 2px;
 }
 div.viewer div.rooms div.room.active {
-  background: #f1f1f1 url("../images/active.png") no-repeat 3px 8px;
+  background: #f1f1f1 url("../images/active.png") no-repeat 6px 8px;
 }
 div.viewer div.rooms div.room.inactive {
-  background: #f1f1f1 url("../images/inactive.png") no-repeat 3px 8px;
+  background: #f1f1f1 url("../images/inactive.png") no-repeat 6px 8px;
   color: #888;
 }
 div.viewer div.rooms div.room.locked {
-  background: #f1f1f1 url("../images/lock.png") no-repeat 3px 8px;
+  background: #f1f1f1 url("../images/lock.png") no-repeat 6px 8px;
 }
 div.viewer div.rooms div.room:hover {
   background-color: #eaeaea !important;
 }
 div.viewer div.rooms div.room.selected {
-  border: 0;
+  border: 1px solid #fff;
   background-color: #fff;
   cursor: default;
 }
@@ -167,7 +167,7 @@ div.viewer div.content div.tab-content div.group div.filters select option {
 div.viewer div.content div.tab-content div.group div.overhang {
   width: 391px;
   height: 5px;
-  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(99%, white));
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #666666), color-stop(99%, rgba(255, 255, 255, 0)));
   position: absolute;
   top: 28px;
   opacity: 0.3;
@@ -275,7 +275,7 @@ div.viewer div.content.joining {
   opacity: 0.7;
   z-index: 1000;
   position: absolute;
-  left: 150px;
+  left: 165px;
 }
 div.blank-slate {
   width: 190px;
