--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -199,6 +199,14 @@ div.viewer {
                             padding: 0.2em;
                         }
                     }
+
+                    select.users-filter {
+                        width: 80px;
+                    }
+
+                    select.types-filter {
+                        width: 80px;
+                    }
                 }
 
                 div.overhang {
