--- a/Code/styles/happycamper.less
+++ b/Code/styles/happycamper.less
@@ -1,3 +1,19 @@
+/* mixins */
+.scrollbar() {
+    height: 0.5ex;
+    width: 8px;
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#D6D6D6), color-stop(40%,#F4F4F4), color-stop(81%,#F4F4F4), color-stop(100%,#D6D6D6));
+}
+
+.scrollbar-thumb {
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#EFEFEF), color-stop(100%,#DEDEDE));
+    border: 1px solid #ccc;
+}
+
+.scrollbar-thumb-hover {
+    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#F3F3F3), color-stop(100%,#E3E3E3));
+}
+
 body {
     font-family: arial, sans-serif;
     font-size: 9pt;
@@ -119,6 +135,9 @@ div.viewer {
                 display: inline-block;
                 padding: 5px 10px 5px 25px;
                 cursor: pointer;
+                border-left: 1px solid #fff;
+                border-right: 1px solid #fff;
+                border-top: 1px solid #fff;
             }
 
             li.chat {
@@ -166,14 +185,13 @@ div.viewer {
 
             div.group {
                 background: #fff;
-                height: 228px;
                 border-top: 1px solid #ddd;
                 border-left: 1px solid #ddd;
                 border-right: 1px solid #e5e5e5;
                 border-bottom: 1px solid #e5e5e5;
                 position: relative;
 
-                div.filters {
+                div.info {
                     background: #f7f7f7;
                     height: 22px;
                     padding: 3px;
@@ -209,6 +227,12 @@ div.viewer {
                     }
                 }
 
+                div.info.title {
+                    cursor: default;
+                    padding: 7px 6px;
+                    height: 14px;
+                }
+
                 div.overhang {
                     width: 391px;
                     height: 5px;
@@ -217,6 +241,12 @@ div.viewer {
                     top: 28px;
                     opacity: 0.3;
                 }
+            }
+        }
+
+        div.tab-content.chat {
+            div.group {
+                height: 228px;
 
                 div.conversation {
                     float: left;
@@ -292,18 +322,15 @@ div.viewer {
                 }
 
                 div.conversation::-webkit-scrollbar {
-                    height: 0.5ex;
-                    width: 8px;
-                    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#D6D6D6), color-stop(40%,#F4F4F4), color-stop(81%,#F4F4F4), color-stop(100%,#D6D6D6));
+                    .scrollbar();
                 }
 
                 div.conversation::-webkit-scrollbar-thumb {
-                    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#EFEFEF), color-stop(100%,#DEDEDE));
-                    border: 1px solid #ccc;
+                    .scrollbar-thumb();
                 }
 
                 div.conversation::-webkit-scrollbar-thumb:hover {
-                    background: -webkit-gradient(linear, left top, right top, color-stop(0%,#F3F3F3), color-stop(100%,#E3E3E3));
+                    .scrollbar-thumb-hover();
                 }
             }
 
@@ -324,6 +351,52 @@ div.viewer {
                     margin-right: 5px;
                     width: 314px;
                     resize: none;
+                }
+            }
+        }
+
+        div.tab-content.users {
+            div.group {
+                height: 280px;
+
+                div.list {
+                    height: 252px;
+                    overflow-y: auto;
+                    overflow-x: hidden;
+
+                    div.user {
+                        padding: 10px 6px;
+                        border-bottom: 1px solid #f3f3f3;
+                        cursor: default;
+
+                        div.attributes {
+                            float: left;
+
+                            span {
+                                display: block;
+                            }
+
+                            span.email {
+                                color: #888;
+                            }
+                        }
+
+                        img {
+                            float: right;
+                        }
+                    }
+                }
+
+                div.list::-webkit-scrollbar {
+                    .scrollbar();
+                }
+
+                div.list::-webkit-scrollbar-thumb {
+                    .scrollbar-thumb();
+                }
+
+                div.list::-webkit-scrollbar-thumb:hover {
+                    .scrollbar-thumb-hover();
                 }
             }
         }
